--- a/app/src/main/res/layout/generate_workout.xml
+++ b/app/src/main/res/layout/generate_workout.xml
@@ -7,6 +7,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:text="Select a Body Area" />
 
@@ -22,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textSize="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:text="Select a Time" />
 
