--- a/app/src/main/res/layout/generate_workout.xml
+++ b/app/src/main/res/layout/generate_workout.xml
@@ -18,7 +18,8 @@
         android:layout_height="236dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
-        android:entries="@array/generate_list_choices" />
+        android:entries="@array/generate_list_choices"
+        android:clickable="true" />
 
     <TextView
         android:layout_width="wrap_content"
