--- a/app/src/main/res/values/generate_list.xml
+++ b/app/src/main/res/values/generate_list.xml
@@ -8,6 +8,7 @@
         <item>Chest</item>
         <item>Back</item>
         <item>Legs</item>
+        <item>Abs</item>
     </string-array>
 
     <string-array name="generate_time">
