Tracking Share Buttons

--- a/app/src/main/res/layout/display_workout_routine.xml
+++ b/app/src/main/res/layout/display_workout_routine.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -57,5 +56,33 @@
         android:textSize="16dp"
         android:autoLink="all"
         android:linksClickable="true"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_chevron_left"
+            android:id="@+id/previousWorkout" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Begin Workout"
+            android:id="@+id/startWorkout"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/nextWorkout"
+            android:drawableRight="@drawable/ic_chevron_right" />
+    </LinearLayout>
 
 </LinearLayout>
