--- a/app/src/main/res/layout/tracking.xml
+++ b/app/src/main/res/layout/tracking.xml
@@ -56,22 +56,19 @@
         <Button
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:id="@+id/btnGooglePlus"
-            android:background="@drawable/google_selector"/>
+            android:id="@+id/btnGooglePlus"/>
 
         <Button
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:id="@+id/btnTwitter"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:background="@drawable/twitter_selector" />
+            android:layout_marginRight="16dp" />
 
         <Button
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:id="@+id/btnFacebook"
-            android:background="@drawable/facebook_selector" />
+            android:id="@+id/btnFacebook"/>
     </LinearLayout>
 
 </LinearLayout>
