--- a/app/src/main/res/drawable/google_selector.xml
+++ b/app/src/main/res/drawable/google_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/white_google" android:state_pressed="true" />
-    <item android:drawable="@drawable/google" android:state_focused="true" />
-    <item android:drawable="@drawable/google" />
+    <item android:drawable="@drawable/google_full" android:state_focused="true" />
+    <item android:drawable="@drawable/google_full" />
 </selector>
