--- a/app/src/main/res/layout/random_workout.xml
+++ b/app/src/main/res/layout/random_workout.xml
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:id="@+id/random_description"
         android:layout_gravity="center_horizontal"
         android:text="@string/dummyString"
         android:layout_marginBottom="16dp"/>
