--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/random_equipment"
+        android:id="@+id/random_workout"
         android:textSize="26dp"
         android:layout_marginLeft="56dp"
         android:layout_marginTop="48dp"/>
