--- a/app/src/main/res/values/generate_list.xml
+++ b/app/src/main/res/values/generate_list.xml
@@ -12,12 +12,23 @@
     </string-array>
 
     <string-array name="generate_time">
-        <item>10 Minutes</item>
-        <item>15 Minutes</item>
-        <item>20 Minutes</item>
-        <item>30 Minutes</item>
-        <item>45 Minutes</item>
-        <item>1 Hour</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>25</item>
+        <item>30</item>
+        <item>35</item>
+        <item>40</item>
+        <item>45</item>
+        <item>50</item>
+        <item>55</item>
+        <item>60</item>
+    </string-array>
+
+    <string-array name="search_time">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
     </string-array>
 
     <string-array name="age">
