--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -19,7 +19,7 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:id="@+id/random_equipment_img"
+        android:id="@+id/dis_workimage"
         android:src="@drawable/ic_camera_alt"
         android:layout_alignParentRight="true"/>
 
