--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -58,11 +58,11 @@
         android:autoLink="all"
         android:linksClickable="true"/>
 
-    <VideoView
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/videoView"
-        android:layout_gravity="center_horizontal"
-        android:clickable="true" />
+        android:text="YouTube"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
