--- a/app/src/main/res/layout/random_workout.xml
+++ b/app/src/main/res/layout/random_workout.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/random_description"
         android:layout_gravity="center_horizontal"
-        android:text="@string/dummyString"
+        android:text=""
         android:layout_marginBottom="16dp"/>
 
     <TextView
