Ill make this work yet

--- a/app/src/main/res/layout/workout_listview_display.xml
+++ b/app/src/main/res/layout/workout_listview_display.xml
@@ -20,7 +20,9 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/dis_workname"
-            android:layout_gravity="center" />
+            android:text="TEST"
+            android:paddingLeft="16dp"
+            android:layout_gravity="left|center_vertical" />
 
     </FrameLayout>
 
