--- a/app/src/main/res/layout/display_workout_routine.xml
+++ b/app/src/main/res/layout/display_workout_routine.xml
@@ -7,21 +7,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/random_equipment"
-        android:text="Equipment"
-        android:textSize="26dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="48dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/random_workout"
+            android:textSize="26dp"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="48dp"/>
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/random_equipment_img"
-        android:src="@drawable/ic_camera_alt"
-        android:layout_alignParentRight="true"/>
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:padding="4dp"
+            android:id="@+id/dis_workimage"
+            android:src="@drawable/ic_camera_alt"
+            android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
 
@@ -35,9 +35,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:id="@+id/random_description"
         android:layout_gravity="center_horizontal"
-        android:text="@string/dummyString"
         android:layout_marginBottom="16dp"/>
 
     <TextView
@@ -56,7 +55,6 @@
         android:textSize="16dp"
         android:autoLink="all"
         android:linksClickable="true"/>
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
