--- a/app/src/main/res/layout/display_workout_routine.xml
+++ b/app/src/main/res/layout/display_workout_routine.xml
@@ -7,21 +7,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/random_equipment"
-        android:text="Equipment"
-        android:textSize="26dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="48dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/random_workout"
+            android:textSize="26dp"
+            android:gravity="left|center_vertical"/>
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/random_equipment_img"
-        android:src="@drawable/ic_camera_alt"
-        android:layout_alignParentRight="true"/>
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/dis_workimage"
+            android:src="@drawable/ic_camera_alt"
+            android:layout_margin="6dp"
+            android:layout_alignParentRight="true"/>
 
     </RelativeLayout>
 
@@ -35,9 +34,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:id="@+id/random_description"
         android:layout_gravity="center_horizontal"
-        android:text="@string/dummyString"
         android:layout_marginBottom="16dp"/>
 
     <TextView
