--- a/app/src/main/res/layout/display_workout_routine.xml
+++ b/app/src/main/res/layout/display_workout_routine.xml
@@ -10,7 +10,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/random_workout"
+            android:id="@+id/name_workout"
             android:textSize="26dp"
             android:gravity="left"
             android:layout_marginTop="64dp"
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/random_description"
+        android:id="@+id/workout_description"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"/>
 
