--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -54,7 +54,7 @@
         android:text="@string/workout"
         android:layout_gravity="center_horizontal"
         android:textSize="16dp"
-        android:autoLink="all"
+        android:clickable="true"
         android:linksClickable="true"/>
 
 </LinearLayout>
