--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="256dp"
         android:layout_height="wrap_content"
         android:id="@+id/random_workout"
         android:textSize="26dp"
